# clo

./: .clang-format  CMakeLists.txt  README.md
examples/: CMakeLists.txt  pattern_comparison.example.cpp  pattern_matching.example.cpp  string_switch.example.cpp
inc/: CMakeLists.txt
inc/c-lo/: as_tuple.hpp  match.hpp  pattern.hpp  tied.hpp
inc/c-lo/detail/: macros.hpp  meta.hpp  range.hpp  type_traits.hpp
inc/clo/: as_tuple.hpp  match.hpp  pattern.hpp
inc/clo/detail/: meta.hpp  range.hpp  type_traits.hpp
libs/: CMakeLists.txt
libs/catch2/: CMakeLists.txt
test/: CMakeLists.txt  match.test.cpp  meta.test.cpp  pattern.test.cpp  type_traits.test.cpp
